--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gridworks-base"
-version = "0.0.0"
+version = "0.0.1"
 description = "Gridworks Base"
 authors = ["GridWorks <gridworks@gridworks-consulting.com>"]
 license = "MIT"
@@ -19,8 +19,14 @@ classifiers = [
 Changelog = "https://github.com/thegridelectric/gridworks-base/releases"
 
 [tool.poetry.dependencies]
-python = "^3.7"
-click = ">=8.0.1"
+python = ">=3.11, <4.0"
+python-dotenv = ">=1.0.0"
+pydantic = "^1.10.2"
+
+pika = "^1.3.2"
+py-algorand-sdk = ">=2.6.1"
+gridworks = "^1.1.3"
+#gridworks = {path="../gridworks", develop=true}
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
