--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "gridworks-base"
-version = "0.0.2"
+version = "0.0.3"
 description = "Gridworks Base"
 authors = ["GridWorks <gridworks@gridworks-consulting.com>"]
 license = "MIT"
@@ -23,7 +23,7 @@ Changelog = "https://github.com/thegridelectric/gridworks-base/releases"
 [tool.poetry.dependencies]
 python = ">=3.11, <4.0"
 python-dotenv = ">=1.0.0"
-pydantic = "^1.10.2"
+pydantic = ">=1.10.2"
 
 pika = "^1.3.2"
 py-algorand-sdk = ">=2.6.1"
