--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,11 +24,13 @@ Changelog = "https://github.com/thegridelectric/gridworks-base/releases"
 python = ">=3.11, <4.0"
 python-dotenv = ">=1.0.0"
 pydantic = ">=1.10.2"
+#pydantic = ">=2.8.2"
 
 pika = "^1.3.2"
 py-algorand-sdk = ">=2.6.1"
-gridworks = "^1.1.3"
 #gridworks = {path="../gridworks", develop=true}
+gridworks = "^1.1.5"
+pydantic = "1.10.2"
 
 [tool.poetry.dev-dependencies]
 Pygments = ">=2.10.0"
