--- a/pyproject.toml
+++ b/pyproject.toml
@@ -64,7 +64,7 @@ branch = true
 source = ["gwbase", "tests"]
 
 [tool.coverage.report]
-show_missing = true
+show_missing = false
 fail_under = 70
 
 [tool.isort]
