--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,7 +61,9 @@ repos:
         language: system
         types: [text]
         stages: [commit, push, manual]
+        exclude: "CodeGenerationTools/.*|rabbit/.*"
   - repo: https://github.com/pre-commit/mirrors-prettier
     rev: v2.6.0
     hooks:
       - id: prettier
+        exclude: "CodeGenerationTools/.*|rabbit/.*"
