--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -34,13 +34,13 @@ repos:
         types: [text]
         stages: [commit, push, manual]
         exclude: "CodeGenerationTools/.*|rabbit/.*"
-      - id: flake8
-        name: flake8
-        entry: flake8
-        language: system
-        types: [python]
-        require_serial: true
-        # args: [--darglint-ignore-regex, .*]
+      # - id: flake8
+      #   name: flake8
+      #   entry: flake8
+      #   language: system
+      #   types: [python]
+      #   require_serial: true
+      # args: [--darglint-ignore-regex, .*]
       - id: isort
         name: isort
         entry: isort
