--- a/pyproject.toml
+++ b/pyproject.toml
@@ -31,18 +31,11 @@ gridworks = "^1.1.7"
 #gridworks = {path="../gridworks", develop=true}
 #gridworks = {git = "https://github.com/thegridelectric/gridworks.git", branch="SOME_DEV_BRANCH"}
 
-[tool.poetry.dev-dependencies]
+[tool.poetry.group.dev.dependencies]
 Pygments = ">=2.10.0"
-black = ">=21.10b0"
 coverage = {extras = ["toml"], version = ">=6.2"}
 # darglint = ">=1.8.1"
-flake8 = ">=4.0.1"
-flake8-bandit = ">=2.1.2"
-flake8-bugbear = ">=21.9.2"
-flake8-docstrings = ">=1.6.0"
-flake8-rst-docstrings = ">=0.2.5"
 furo = ">=2021.11.12"
-isort = ">=5.10.1"
 mypy = ">=0.930"
 pep8-naming = ">=0.12.1"
 pre-commit = ">=2.16.0"
@@ -54,6 +47,8 @@ sphinx-autobuild = ">=2021.3.14"
 sphinx-click = ">=3.0.2"
 xdoctest = {extras = ["colors"], version = ">=0.15.10"}
 myst-parser = {version = ">=0.16.1"}
+ruff = "^0.5.6"
+pika-stubs = "^0.1.3"
 
 [tool.coverage.paths]
 source = ["src", "*/site-packages"]
@@ -67,11 +62,6 @@ source = ["gwbase", "tests"]
 show_missing = false
 fail_under = 70
 
-[tool.isort]
-profile = "black"
-force_single_line = true
-lines_after_imports = 2
-
 [tool.mypy]
 strict = true
 warn_unreachable = true
@@ -83,3 +73,31 @@ show_error_context = true
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.ruff]
+exclude = [
+    ".ci",
+    ".github",
+    "CodeGenerationTools",
+    "for_docker",
+    "docs",
+    "for_docker",
+    "rabbit",
+    ".git",
+    ".mypy_cache",
+    ".nox",
+    "htmlcov",
+    ".pyenv",
+    ".pytest_cache",
+    ".pytype",
+    ".ruff_cache",
+    ".venv",
+    ".vscode",
+    "pythonProject",
+    ".idea",
+    "__pypackages__",
+    "_build",
+    "buck-out",
+    "build",
+    "dist",
+]
