--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -36,3 +36,9 @@ repos:
         types: [text]
         stages: [commit, push, manual]
         exclude: "CodeGenerationTools/.*|rabbit/.*"
+  - repo: https://github.com/astral-sh/ruff-pre-commit
+    # Ruff version.
+    rev: v0.5.6
+    hooks:
+      # - id: ruff
+      - id: ruff-format
