--- a/pyproject.toml
+++ b/pyproject.toml
@@ -101,3 +101,19 @@ exclude = [
     "build",
     "dist",
 ]
+output-format = "concise"
+
+[tool.ruff.lint]
+select = ["ALL"]
+ignore = ["D", "TD"]
+
+[tool.ruff.lint.extend-per-file-ignores]
+"tests/**/*.py" = [
+    # at least this three should be fine in tests:
+    "S101", # asserts allowed in tests...
+#    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant...
+#    "FBT", # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
+#    # The below are debateable
+#    "PLR2004", # Magic value used in comparison, ...
+#    "S311", # Standard pseudo-random generators are not suitable for cryptographic purposes
+]
