--- a/pyproject.toml
+++ b/pyproject.toml
@@ -105,7 +105,7 @@ output-format = "concise"
 
 [tool.ruff.lint]
 select = ["ALL"]
-ignore = ["D", "TD"]
+ignore = ["D", "TD", "E501"]
 
 [tool.ruff.lint.extend-per-file-ignores]
 "tests/**/*.py" = [
