--- a/pyproject.toml
+++ b/pyproject.toml
@@ -102,10 +102,17 @@ exclude = [
     "dist",
 ]
 output-format = "concise"
+fix = true
+show-fixes = true
+
+[tool.ruff.format]
+preview = true
 
 [tool.ruff.lint]
-select = ["ALL"]
-ignore = ["D", "TD", "E501"]
+# default select used by  ruff: ["E4", "E7", "E9", "F"]
+select = ["B","C90","E4", "E7", "E9","F","I","N","PL", "W",]
+ignore = ["PLR0904", "PLW1514", "W191",]
+preview = true
 
 [tool.ruff.lint.extend-per-file-ignores]
 "tests/**/*.py" = [
