--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -40,5 +40,6 @@ repos:
     # Ruff version.
     rev: v0.5.6
     hooks:
-      # - id: ruff
+      - id: ruff
+        args: ["--select", "I"]
       - id: ruff-format
