--- a/pyproject.toml
+++ b/pyproject.toml
@@ -109,7 +109,7 @@ preview = true
 [tool.ruff.lint]
 # default select used by  ruff: ["E4", "E7", "E9", "F"]
 select = ["B","C90","E4", "E7", "E9","F","I","N","PL", "W",]
-ignore = ["PLR0904", "PLW1514", "W191",]
+ignore = ["B027", "PLR0904", "PLW1514", "W191",]
 preview = true
 
 [tool.ruff.lint.extend-per-file-ignores]
