--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -104,12 +104,12 @@ jobs:
         run: |
           nox --python=${{ matrix.python }}
 
-      - name: Upload coverage data
-        if: matrix.session == 'tests' && matrix.python == '3.12' && matrix.os == 'ubuntu-latest'
-        uses: actions/upload-artifact@v4
-        with:
-          name: coverage-data
-          path: ".coverage.*"
+      # - name: Upload coverage data
+      #   if: matrix.session == 'tests' && matrix.python == '3.12' && matrix.os == 'ubuntu-latest'
+      #   uses: actions/upload-artifact@v4
+      #   with:
+      #     name: coverage-data
+      #     path: ".coverage.*"
 
       - name: Upload documentation
         if: matrix.session == 'docs-build'
@@ -118,46 +118,46 @@ jobs:
           name: docs
           path: docs/_build
 
-  coverage:
-    runs-on: ubuntu-latest
-    needs: tests
-    steps:
-      - name: Check out the repository
-        uses: actions/checkout@v4
+  # coverage:
+  #   runs-on: ubuntu-latest
+  #   needs: tests
+  #   steps:
+  #     - name: Check out the repository
+  #       uses: actions/checkout@v4
 
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: "3.11"
+  #     - name: Set up Python
+  #       uses: actions/setup-python@v5
+  #       with:
+  #         python-version: "3.11"
 
-      - name: Upgrade pip
-        run: |
-          pip install ${{ env.PIP_ARGS }} pip
-          pip --version
+  #     - name: Upgrade pip
+  #       run: |
+  #         pip install ${{ env.PIP_ARGS }} pip
+  #         pip --version
 
-      - name: Install Poetry
-        run: |
-          pipx install --pip-args=${{ env.PIP_ARGS }} poetry
-          poetry --version
+  #     - name: Install Poetry
+  #       run: |
+  #         pipx install --pip-args=${{ env.PIP_ARGS }} poetry
+  #         poetry --version
 
-      - name: Install Nox
-        run: |
-          pipx install --pip-args=${{ env.PIP_ARGS }} nox
-          pipx inject --pip-args=${{ env.PIP_ARGS }} nox nox-poetry
-          nox --version
+  #     - name: Install Nox
+  #       run: |
+  #         pipx install --pip-args=${{ env.PIP_ARGS }} nox
+  #         pipx inject --pip-args=${{ env.PIP_ARGS }} nox nox-poetry
+  #         nox --version
 
-      - name: Download coverage data
-        uses: actions/download-artifact@v4
-        with:
-          name: coverage-data
+  #     - name: Download coverage data
+  #       uses: actions/download-artifact@v4
+  #       with:
+  #         name: coverage-data
 
-      - name: Combine coverage data and display human readable report
-        run: |
-          nox --session=coverage
+  #     - name: Combine coverage data and display human readable report
+  #       run: |
+  #         nox --session=coverage
 
-      - name: Create coverage report
-        run: |
-          nox --session=coverage -- xml
+  #     - name: Create coverage report
+  #       run: |
+  #         nox --session=coverage -- xml
 
-      - name: Upload coverage report
-        uses: codecov/codecov-action@v4.1.0
+  #     - name: Upload coverage report
+  #       uses: codecov/codecov-action@v4.1.0
